--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "angular-webpack2-starter",
-  "version": "1.15.0",
+  "name": "ng2-chart-example",
+  "version": "0.0.1",
   "description": "Angular and Webpack 2 Starter",
-  "author": "Qdouble <qdouble@gmail.com>",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/qdouble/angular-webpack2-starter.git"
-  },
+  "author": "Ziga Marolt",
   "scripts": {
     "postinstall": "npm run build:dll",
     "rimraf": "rimraf",
@@ -21,112 +17,68 @@
   "dependencies": {
     "@angular/common": "~2.4.5",
     "@angular/compiler": "~2.4.5",
+    "@angular/compiler-cli": "^2.4.7",
     "@angular/core": "~2.4.5",
     "@angular/forms": "~2.4.5",
     "@angular/http": "~2.4.5",
     "@angular/platform-browser": "~2.4.5",
     "@angular/platform-browser-dynamic": "~2.4.5",
-    "@angular/router": "~3.4.1",
+    "@angular/router": "3.4.5",
+    "@angular/tsc-wrapped": "^0.5.2",
+    "@angularclass/hmr": "1.2.2",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.18",
+    "@swimlane/ngx-charts": "^4.1.0",
+    "angular2-chartjs": "^0.1.6",
+    "bootstrap": "^4.0.0-alpha.6",
+    "chart.js": "^2.4.0",
     "core-js": "^2.4.1",
     "d3": "^4.4.0",
-    "@swimlane/ngx-charts": "^4.1.0",
-    "rxjs": "5.0.1",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.6",
-    "@angular/compiler-cli": "2.1.0",
-    "@angular/material": "2.0.0-alpha.11-3",
-    "@angular/platform-server": "2.1.0",
-    "@angular/tsc-wrapped": "0.3.0",
-    "@angularclass/hmr": "1.2.2",
-    "@angularclass/hmr-loader": "3.0.2",
-    "@angularclass/idle-preload": "^1.0.4",
-    "@ngrx/core": "1.2.0",
-    "@ngrx/effects": "2.0.0",
-    "@ngrx/router-store": "1.2.5",
-    "@ngrx/store": "2.2.1",
-    "@ngrx/store-devtools": "3.2.2",
-    "@ngrx/store-log-monitor": "3.0.2",
-    "angular2-express-engine": "2.1.0-rc.1",
-    "angular2-platform-node": "2.1.0-rc.1",
-    "angular2-universal": "2.1.0-rc.1",
-    "angular2-universal-polyfills": "2.1.0-rc.1",
-    "body-parser": "1.15.2",
-    "compression": "1.6.2",
-    "cookie-parser": "1.4.3",
-    "express": "4.14.0",
-    "hammerjs": "~2.0.8",
-    "methods": "1.1.2",
-    "ngrx-store-freeze": "0.1.6",
-    "ngrx-store-logger": "0.1.7"
+    "ng2-resource-rest": "^1.9.1",
+    "ng2-slim-loading-bar": "^2.0.7",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.3",
+    "typescript": "^2.2.0",
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
-    "@types/d3": "^4.3.0",
-    "@types/jasmine": "^2.2.30",
-    "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.24",
-    "codelyzer": "1.0.0-beta.4",
-    "jasmine-core": "2.4.1",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.9",
-    "ts-node": "1.2.1",
-    "tslint": "3.13.0",
-    "typescript": "~2.0.3",
-    "@types/body-parser": "~0.0.33",
-    "@types/compression": "~0.0.33",
-    "@types/cookie-parser": "~1.3.30",
+    "@angularclass/hmr-loader": "3.0.2",
     "@types/core-js": "~0.9.35",
-    "@types/express": "~4.0.33",
-    "@types/express-serve-static-core": "~4.0.37",
-    "@types/hammerjs": "~2.0.33",
-    "@types/ip": "~0.0.29",
-    "@types/mime": "~0.0.29",
-    "@types/selenium-webdriver": "~2.44.29",
-    "@types/serve-static": "~1.7.31",
-    "angular-router-loader": "~0.5.0",
+    "@types/d3": "^4.5.0",
+    "@types/node": "~6.0.52",
+    "@types/selenium-webdriver": "~2.53.37",
+    "angular-router-loader": "~0.4.0",
     "angular2-template-loader": "~0.6.0",
     "awesome-typescript-loader": "~3.0.0-beta.17",
-    "compression-webpack-plugin": "~0.3.1",
+    "codelyzer": "~2.0.0-beta.3",
     "copy-webpack-plugin": "~4.0.0",
     "css-loader": "~0.26.0",
-    "es6-promise": "~4.0.5",
-    "es6-promise-loader": "~1.0.2",
-    "html-webpack-plugin": "~2.26.0",
+    "dotenv": "^2.0.0",
+    "extract-text-webpack-plugin": "2.0.0-rc.3",
+    "file-loader": "^0.9.0",
+    "font-awesome": "^4.7.0",
+    "html-webpack-plugin": "^2.26.0",
     "imports-loader": "~0.7.0",
-    "ip": "~1.1.3",
-    "istanbul-instrumenter-loader": "~0.2.0",
     "json-loader": "~0.5.4",
-    "karma-coverage": "~1.1.1",
-    "karma-mocha-reporter": "~2.2.1",
-    "karma-phantomjs-launcher": "~1.0.2",
-    "karma-remap-coverage": "0.1.4",
-    "karma-sourcemap-loader": "~0.3.7",
-    "karma-webpack": "2.0.1",
-    "node-sass": "~4.2.0",
-    "npm-run-all": "~4.0.0",
-    "phantomjs-polyfill": "~0.0.2",
-    "phantomjs-prebuilt": "~2.1.13",
+    "node-sass": "^3.4.2",
     "raw-loader": "~0.5.1",
     "rimraf": "~2.5.4",
+    "sass-loader": "^4.0.0",
     "source-map-loader": "~0.1.5",
     "string-replace-loader": "~1.0.5",
-    "to-string-loader": "~1.1.5",
+    "style-loader": "^0.13.1",
+    "supports-color": "^3.1.2",
     "ts-helpers": "~1.1.1",
+    "ts-node": "~1.7.0",
+    "tslint": "~4.1.1",
     "tslint-loader": "~3.3.0",
-    "watch-run": "~1.2.4",
-    "webpack": "2.2.0-rc.3",
+    "typedoc": "^0.5.1",
+    "typescript": "^2.0.10",
+    "url-loader": "^0.5.7",
+    "webpack": "2.2.1",
     "webpack-bundle-analyzer": "^2.1.1",
     "webpack-dev-middleware": "~1.9.0",
     "webpack-dev-server": "2.2.0-rc.0",
-    "webpack-merge": "~1.1.2"
+    "webpack-md5-hash": "0.0.5"
   },
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/qdouble/angular-webpack2-starter/issues"
-  },
-  "homepage": "https://github.com/qdouble/angular-webpack2-starter#readme"
+  "engine": "node >= 7.4.0"
 }
