--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
   "dependencies": {
     "@angular/common": "~2.4.5",
     "@angular/compiler": "~2.4.5",
-    "@angular/compiler-cli": "^2.4.7",
     "@angular/core": "~2.4.5",
     "@angular/forms": "~2.4.5",
     "@angular/http": "~2.4.5",
     "@angular/platform-browser": "~2.4.5",
     "@angular/platform-browser-dynamic": "~2.4.5",
-    "@angular/router": "3.4.5",
+    "@angular/router": "~3.4.1",
     "@angular/tsc-wrapped": "^0.5.2",
     "@angularclass/hmr": "1.2.2",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.18",
     "@swimlane/ngx-charts": "^4.1.0",
+    "angular-router-loader": "^0.5.0",
     "angular2-chartjs": "^0.1.6",
+    "awesome-typescript-loader": "^3.0.3",
     "bootstrap": "^4.0.0-alpha.6",
     "chart.js": "^2.4.0",
     "core-js": "^2.4.1",
@@ -45,8 +46,6 @@
     "@types/core-js": "~0.9.35",
     "@types/d3": "^4.5.0",
     "@types/node": "~6.0.52",
-    "@types/selenium-webdriver": "~2.53.37",
-    "angular-router-loader": "~0.4.0",
     "angular2-template-loader": "~0.6.0",
     "awesome-typescript-loader": "~3.0.0-beta.17",
     "codelyzer": "~2.0.0-beta.3",
@@ -55,18 +54,16 @@
     "dotenv": "^2.0.0",
     "extract-text-webpack-plugin": "2.0.0-rc.3",
     "file-loader": "^0.9.0",
-    "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^2.26.0",
     "imports-loader": "~0.7.0",
     "json-loader": "~0.5.4",
-    "node-sass": "^3.4.2",
+    "node-sass": "~4.2.0",
     "raw-loader": "~0.5.1",
     "rimraf": "~2.5.4",
     "sass-loader": "^4.0.0",
     "source-map-loader": "~0.1.5",
     "string-replace-loader": "~1.0.5",
     "style-loader": "^0.13.1",
-    "supports-color": "^3.1.2",
     "ts-helpers": "~1.1.1",
     "ts-node": "~1.7.0",
     "tslint": "~4.1.1",
