--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ng2-chart-example",
   "version": "0.0.1",
-  "description": "Angular and Webpack 2 Starter",
+  "description": "Chart test",
   "author": "Ziga Marolt",
   "scripts": {
     "postinstall": "npm run build:dll",
@@ -23,54 +23,44 @@
     "@angular/platform-browser": "~2.4.5",
     "@angular/platform-browser-dynamic": "~2.4.5",
     "@angular/router": "~3.4.1",
-    "@angular/tsc-wrapped": "^0.5.2",
     "@angularclass/hmr": "1.2.2",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.18",
     "@swimlane/ngx-charts": "^4.1.0",
-    "angular-router-loader": "^0.5.0",
-    "angular2-chartjs": "^0.1.6",
-    "awesome-typescript-loader": "^3.0.3",
     "bootstrap": "^4.0.0-alpha.6",
-    "chart.js": "^2.4.0",
-    "core-js": "^2.4.1",
-    "d3": "^4.4.0",
     "ng2-resource-rest": "^1.9.1",
     "ng2-slim-loading-bar": "^2.0.7",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.3",
-    "typescript": "^2.2.0",
+    "core-js": "^2.4.1",
+    "d3": "4.4.0",
+    "rxjs": "5.0.1",
+    "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
     "@angularclass/hmr-loader": "3.0.2",
+    "@types/d3": "4.4.0",
+    "@types/node": "^6.0.42",
     "@types/core-js": "~0.9.35",
-    "@types/d3": "^4.5.0",
-    "@types/node": "~6.0.52",
+    "angular-cli": "1.0.0-beta.24",
+    "codelyzer": "~2.0.0-beta.3",
+    "ts-node": "1.2.1",
+    "ts-helpers": "~1.1.1",
+    "tslint": "3.13.0",
+    "angular-router-loader": "~0.5.0",
     "angular2-template-loader": "~0.6.0",
     "awesome-typescript-loader": "~3.0.0-beta.17",
-    "codelyzer": "~2.0.0-beta.3",
     "copy-webpack-plugin": "~4.0.0",
     "css-loader": "~0.26.0",
-    "dotenv": "^2.0.0",
-    "extract-text-webpack-plugin": "2.0.0-rc.3",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.26.0",
+    "es6-promise": "~4.0.5",
+    "es6-promise-loader": "~1.0.2",
+    "html-webpack-plugin": "~2.26.0",
     "imports-loader": "~0.7.0",
     "json-loader": "~0.5.4",
     "node-sass": "~4.2.0",
+    "npm-run-all": "~4.0.0",
     "raw-loader": "~0.5.1",
     "rimraf": "~2.5.4",
-    "sass-loader": "^4.0.0",
     "source-map-loader": "~0.1.5",
-    "string-replace-loader": "~1.0.5",
-    "style-loader": "^0.13.1",
-    "ts-helpers": "~1.1.1",
-    "ts-node": "~1.7.0",
-    "tslint": "~4.1.1",
     "tslint-loader": "~3.3.0",
-    "typedoc": "^0.5.1",
-    "typescript": "^2.0.10",
-    "url-loader": "^0.5.7",
+    "typescript": "~2.0.10",
     "webpack": "2.2.1",
     "webpack-bundle-analyzer": "^2.1.1",
     "webpack-dev-middleware": "~1.9.0",
